seasonssk.css
/* Testlayout stylesheet */

@import url(../../../css/csslayer.css);

:root {
	--scoreColor: #2373a1;
	--scoreSecondaryColor: #325590;
	--scoreShadowColor: white;
}

html.season_1,
html.season_2,
html.season_3,
html.season_4 {
	background-image: url("img/backgroundSeason.jpg");
	background-attachment: fixed;
	background-position: 50%;
	background-size: cover;
}

h3 {
	color: white;
}

/* player_hand scrollbar */
/* Hide scrollbar for Chrome, Safari and Opera */
.scrollable-stock-inner::-webkit-scrollbar {
	display: none;
}
/* Hide scrollbar for IE, Edge and Firefox */
.scrollable-stock-inner {
	-ms-overflow-style: none; /* IE and Edge */
	scrollbar-width: none; /* Firefox */
}

/* main board */

#board {
	width: 400px;
	height: 400px;
	background-image: url("img/board.png");
	float: left;
	position: relative;
	box-shadow: 0px 0px 10px 4px #e9b415;
	border-radius: 210px;
}
#season_library_choice {
	width: 410px;
	float: left;
	position: relative;
	left: -10px;
	top: -10px;
}

.tokenart {
	width: 99px;
	height: 99px;
	background: url("img/abilityTokens.png");
	display: inline-block;
}

.tokentooltip {
	text-align: center;
	max-width: 250px;
}

#abilityTokens {
	display: none;
}
.gamestate_chooseToken #abilityTokens,
.gamestate_draftChoice #abilityTokens,
.gamestate_draftTwist #abilityTokens,
.gamestate_prepareBuildLibrary #abilityTokens,
.gamestate_buildLibraryNew #abilityTokens {
	display: block;
}

.season_1 #season_dices_wrap {
	background: url("img/convertSeason1.png");
	background-size: auto 100%;
}
.season_2 #season_dices_wrap {
	background: url("img/convertSeason2.png");
	background-size: auto 100%;
}
.season_3 #season_dices_wrap {
	background: url("img/convertSeason3.png");
	background-size: auto 100%;
}
.season_4 #season_dices_wrap {
	background: url("img/convertSeason4.png");
	background-size: auto 100%;
}

.seasons_rightpanel {
	margin-left: 410px;
}

.monthplace {
	width: 30px;
	height: 30px;
	position: absolute;
}
#monthplace_1 {
	left: 230px;
	top: 10px;
}
#monthplace_2 {
	left: 315px;
	top: 55px;
}
#monthplace_3 {
	left: 360px;
	top: 140px;
}
#monthplace_4 {
	left: 360px;
	top: 230px;
}
#monthplace_5 {
	left: 315px;
	top: 315px;
}
#monthplace_6 {
	left: 230px;
	top: 360px;
}
#monthplace_7 {
	left: 140px;
	top: 360px;
}
#monthplace_8 {
	left: 55px;
	top: 315px;
}
#monthplace_9 {
	left: 10px;
	top: 230px;
}
#monthplace_10 {
	left: 10px;
	top: 140px;
}
#monthplace_11 {
	left: 55px;
	top: 55px;
}
#monthplace_12 {
	left: 140px;
	top: 10px;
}

#current_month {
	width: 30px;
	height: 30px;
	background-image: url("img/icons.png");
	position: absolute;
	background-position: -0px -25px;
	left: 185px;
	top: 185px;
}

.yearplace {
	position: absolute;
	width: 36px;
	height: 36px;
}
#yearplace_1 {
	left: 149px;
	top: 183px;
}
#yearplace_2 {
	left: 181px;
	top: 183px;
}
#yearplace_3 {
	left: 214px;
	top: 183px;
}

#current_year {
	width: 36px;
	height: 36px;
	box-shadow: 0px 0px 7px 8px #e9b415;
	border-radius: 20px;
	position: absolute;
	background-position: -30px -25px;
	left: 149px;
	top: 183px;
}

.bonus_actions {
	display: grid;
	grid-template-columns: 40px 40px;
	grid-template-rows: 56px 56px;
	grid-column-gap: 5px;
	grid-row-gap: 5px;
}

.bonus {
	cursor: pointer;
	background-image: url("img/bonuses.png");
	border-radius: 6px;
}
.bonus1 {
	width: 39px;
	height: 55px;
	background-position: -47px -3px;
}
.bonus2 {
	width: 39px;
	height: 55px;
	background-position: -92px -3px;
}
.bonus4 {
	width: 38px;
	height: 55px;
	background-position: -3px -3px;
}
.bonus3 {
	width: 39px;
	height: 55px;
	background-position: -137px -3px;
}

.ssn-info {
	font-size: smaller;
}

.enabled {
	box-shadow: 0px 0px 1px 2px #f0ec18;
}

#season_dices_wrap {
	display: flex;
	flex-flow: wrap;
	justify-content: space-between;
	align-items: center;
	gap: 5px;
	padding: 10px 5px 18px 5px;
}

/* don't need border since the die moves immediatly somewhere else.*/
#seasons_dices .stockitem_selected {
	border: none !important;
}

.gamestate_draftChoice #season_dices_wrap,
.gamestate_continueDraftChoice #season_dices_wrap,
.gamestate_draftTwist #season_dices_wrap,
.gamestate_chooseToken #season_dices_wrap,
.gamestate_buildLibraryNew #season_dices_wrap,
.gamestate_buildLibrary3 #season_dices_wrap,
.gamestate_buildLibrary2 #season_dices_wrap {
	display: none;
}

.conversion_reminder {
	display: flex;
	grid-column: 2;
	align-items: center;
	gap: 12px;
}

.reminder {
	display: flex;
	align-items: center;
}

#convertFor1 .energy {
	margin: 0px 3px 0px 3px;
}

/*Player board on the left*/
.leftPlayerBoard {
	border: 2px solid #9d7e7e;
	border-radius: 60px;
	display: inline-flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	padding: 5px;
	position: relative;
	gap: 3px;
}
.leftPlayerBoard .ssn-avatar {
	width: 92px;
	height: 92px;
	border: 2px solid;
	border-radius: 50px;
	border-color: inherit;
	/*position: absolute;
	top: 10px;*/
}

.bonus_actions_used {
	margin-bottom: 5px;
}

.bonus_actions_used div:first-child,
.bonus_actions_used div:last-child {
	margin-bottom: -4px;
}

.leftPlayerBoard .icon_cristal {
	position: relative;
	top: 0px;
	left: -17px;
}
.leftPlayerBoard .prestige {
	position: relative;
	top: 0px;
	right: -15px;
}

#board_counters {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: flex-start;
	width: 100%;
	position: absolute;
	top: 0px;
}

.counter {
	color: white;
	font-weight: bold;
	display: flex !important;
	justify-content: center;
	align-items: center;
}

.conversion_reminder .counter {
	color: black;
	-webkit-text-stroke: 1px #fff;
	font-size: x-large;
}

.conversion_reminder .energy1,
.conversion_reminder .energy2,
.conversion_reminder .energy3,
.conversion_reminder .energy4 {
	/*width: 33px;
	height: 33px;todo big energies here*/
}

.ages {
	position: absolute;
	bottom: -45px;
	left: 5px;
	display: flex;
	column-gap: 6px;
	justify-content: center;
}
.age {
	width: 55px;
	height: 55px;
	cursor: pointer;
}
/* ... */

